added some CSS and JS

--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
   <main>
     <p>Boilerplate is any text that is or can be reused in new contexts or applications without being greatly changed from the original.</p>
     <nav>
-      <li>1. Etymology</li>
-      <li>2. Boilerplate language</li>
-      <li>3. Boilerplate code</li>
-      <li>4. See also</li>
-      <li>5. External links</li>
+      <ul>
+        <li><a href="#etymology">Etymology</a></li>
+        <li><a href="#language">Boilerplate language</a></li>
+        <li><a href="#code">Boilerplate code</a></li>
+        <li><a href="#also">See also</a></li>
+        <li><a href="#references">See also</a></li>
+        <li><a href="#external">External links</a></li>
+      </ul>
     </nav>
     <section>
-      <h2>
+      <h2 id="etymology">
         Etymology
       </h2>
       <p class="">
@@ -47,13 +50,13 @@
 
         Some companies also sent out press releases as boilerplate so that they had to be printed as written. The modern equivalent is the press release boilerplate, or "boiler," a paragraph or two that describes the company and its products.
       </p>
-      <h2>Boilerplate Language</h2>
+      <h2 id="language">Boilerplate Language</h2>
       <p class="">
         In contractual law, the term "boilerplate language" describes the parts of a contract that are considered standard.
 
         Boilerplate language may also exist in pre-created form letters on the Internet for such things as issues to be broached by a politician based on an issue ad, requests that a cable or satellite operator add a cable network to a system, pre-written complaints about a product that is opposed by groups that create such letters, or online petitions. The person requesting the action usually only needs to type or sign his or her name at the end of the pre-written greeting and body.
       </p>
-      <h2>Boilerplate Code</h2>
+      <h2 id="code">Boilerplate Code</h2>
       <p class="">
         In computer programming, boilerplate is the sections of code that have to be included in many places with little or no alteration. Such boilerplate is particularly salient when the programmer must include a lot of code for minimal functionality. The need for boilerplate can be reduced through high-level mechanisms.
 
@@ -61,8 +64,31 @@
         </p>
     </section>
     <section>
-      
-    </section>
+      <h3 id="also">See Also</h3>
+      <ul>
+        <li>Library (computer science)</li>
+        <li>Template processors are used to generate boilerplate text automatically</li>
+        <li>Transpromotional</li>
+      </ul>
+      <h3 id="references">References</h3>
+      <ol>
+        <li>"boiler plate", Oxford English Dictionary, 2nd Edition (online).(subscription required)</li>
+        <li>"Building that was home to boilerplate to become luxury condos". Retrieved 2016-07-21.</li>
+      </ol>
+
+      <h3 id="external">External links</h3>
+      <ul>
+        <li>On the etymology</li>
+        <li>Example of a boiler plate</li>
+      </ul>
+ 
+    <!-- helper class used -->
+  </section>
+  <footer>
+    <p class="footerNote">
+      source: http://en.wikipedia.org/wiki/Boilerplate_(text)
+    </p>
+  </footer>
   </main>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
