added more styles and fixed some JS

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
   <h1>Boilerplate</h1>
   <main>
     <p>Boilerplate is any text that is or can be reused in new contexts or applications without being greatly changed from the original.</p>
-    <nav>
+    
+    <h3 class="navButton">Table of Contents</h3>
+    <nav class="nav hidden">
       <ul>
         <li><a href="#etymology">Etymology</a></li>
         <li><a href="#language">Boilerplate language</a></li>
@@ -85,7 +87,7 @@
     <!-- helper class used -->
   </section>
   <footer>
-    <p class="footerNote">
+    <p class="hidden">
       source: http://en.wikipedia.org/wiki/Boilerplate_(text)
     </p>
   </footer>
